--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,14 @@
         </activity>
         <activity android:name=".activities.login_activity" />
         <activity android:name=".activities.sign_up_activity" />
-        <activity android:name=".activities.set_profile_activity" />
-        <activity android:name=".activities.password_reset_activity"></activity>
+        <activity android:name=".activities.set_profile_activity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".activities.password_reset_activity" />
     </application>
 
 </manifest>
