--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,16 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.password_reset_activity" />
+        <activity
+            android:name=".activities.Locations_in_Africa"
+            android:label="@string/title_activity_locations_in__africa"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
