--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,13 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.login_activity" />
-        <activity android:name=".activities.sign_up_activity" />
+        <activity android:name=".activities.sign_up_activity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".activities.set_profile_activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
