--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.beatrice.nearby_nearme_gym">
 
+    <!-- internet permission -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,13 +12,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity android:name=".activities.login_activity" />
         <activity android:name=".activities.sign_up_activity">
             <intent-filter>
@@ -24,18 +20,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.set_profile_activity">
+        <activity android:name=".activities.set_profile_activity"></activity>
+        <activity android:name=".activities.password_reset_activity" />
+        <activity
+            android:name=".activities.Locations_in_Africa"
+            android:label="@string/title_activity_locations_in__africa"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.password_reset_activity" />
-        <activity
-            android:name=".activities.Locations_in_Africa"
-            android:label="@string/title_activity_locations_in__africa"
-            android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".activities.Add_work_out_session">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
