--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.0.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
 
+    //facebook
+    implementation 'com.facebook.android:facebook-login:[4,5)'
+
 
 }
