--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,8 @@ dependencies {
     implementation 'com.facebook.android:facebook-login:[4,5)'
 
 
+    //recycler view
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+
+
 }
