--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,13 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
 
-        <activity android:name=".activities.login_activity" />
+        <activity android:name=".activities.login_activity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".activities.sign_up_activity" />
         <activity android:name=".activities.set_profile_activity" />
         <activity android:name=".activities.password_reset_activity" />
@@ -26,13 +32,14 @@
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
-        <activity android:name=".activities.Add_work_out_session" />
-        <activity android:name=".activities.user_profile">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".activities.Add_work_out_session"
+            android:parentActivityName=".activities.Locations_in_Africa">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        </activity>
+
+        <activity android:name=".activities.user_profile"
+            android:parentActivityName=".activities.Locations_in_Africa">
+
         </activity>
     </application>
 
